Fixed MS lock on RFI flag mask

--- a/inputs.ini
+++ b/inputs.ini
@@ -20,6 +20,7 @@ ptcal     = ptcal_name
 # Pipeline steps in groups in order of execution:
 # pre_processing
 #     run_importfits
+#     flag_mask
 #     flag_aoflagger
 #     flag_apriori
 #     flag_manual
